[gd_scene load_steps=3 format=3 uid="uid://c7mxal3ekqad8"]

[ext_resource type="Script" uid="uid://cbvhge0j3aiwi" path="res://scripts/highlight_text_node.gd" id="1_b07gw"]
[ext_resource type="PackedScene" uid="uid://bnfa3c6dm1fre" path="res://nodes/PopupContainer.tscn" id="2_b07gw"]

[node name="HighlightTextNode" type="GraphNode" node_paths=PackedStringArray("popup_container", "close_button")]
offset_right = 400.0
offset_bottom = 200.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_b07gw")
popup_container = NodePath("PopupContainer")
close_button = NodePath("HBoxContainer/CloseButton")
graph_class_name = "HighlightTextNode"
metadata/_custom_type_script = "uid://c0tt7qeudxgun"

[node name="PopupContainer" parent="." instance=ExtResource("2_b07gw")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_right = 8.0
offset_bottom = 8.0

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
context_menu_enabled = false
wrap_mode = 1

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(114, 100)
item_count = 1
item_0/text = "Mark as link"
item_0/id = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="CloseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "close"

[node name="TextEdit_0" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
selection_enabled = true

[connection signal="focus_exited" from="CanvasLayer/PanelContainer/TextEdit" to="." method="_on_popup_panel_popup_hide"]
[connection signal="gui_input" from="CanvasLayer/PanelContainer/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="focus_entered" from="TextEdit_0" to="." method="_on_text_edit_focus_entered"]
